[package]
name = "wasm-mt-pool-helpers"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.87"
wasm-mt = { git = "https://github.com/voidxnull/wasm-mt", branch = "fix/wasm-path" }
wasm-mt-pool = { git = "https://github.com/voidxnull/wasm-mt", branch = "fix/wasm-path" }

serde = { version = "1.0", features = ["derive"] }
serde_closure = { version = "0.3" }
serde-wasm-bindgen = "0.5"
wasm-bindgen-futures = "0.4.37"
itertools = "0.11.0"
once_cell = "1.18.0"
web-sys = "0.3.64"